# Stable-Diffuser-UI

./: .env.example  .gitignore  README.md  docker-compose.yaml
be/: .env.example  Dockerfile  Makefile  go.mod  go.sum
be/cmd/server/: main.go
be/config/: config.go  config.yaml
be/internal/clients/huggingface/: client.go  flexible_time.go  flexible_time_test.go  types.go
be/internal/clients/transport/: http.go
be/internal/dependencies/: rpc.go
be/internal/mediator/: mediator.go
be/internal/services/: api.go  api_handlers.go  api_handlers_rest.go  api_handlers_ws.go  api_middleware.go  api_types.go  dl.go  download.go  hub.go  hub_clients.go  request_logging.go
be/proto/: image_service.pb.go  image_service.proto  image_service_grpc.pb.go
be/types/: api.go
be/utils/: files.go
fe/: package-lock.json  package.json
fe/src/app/: page.tsx
fe/src/app/_home/: types.ts  useHomeController.ts  utils.ts
fe/src/app/i2v/: page.tsx
fe/src/app/image-to-video/: page.tsx
fe/src/app/t2i/: page.tsx
fe/src/components/: download-model-by-id.tsx  prompt-fields.tsx  toast-stack.tsx
fe/src/lib/: api.ts
py/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
py/proto/: img_service.proto  img_service_pb2.py  img_service_pb2.pyi  img_service_pb2_grpc.py
py/services/grpc/: image_generator.py  image_service.py  server.py
py/services/loader/: model_loader.py
py/services/metrics/: perf_metrics.py
py/services/models/: image_to_video.py  text_to_image.py
py/services/sdxl/: img_generator.py  model_loader.py
(+14 files in other folders)
