[project]
name = "img-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "diffusers (>=0.36.0,<0.37.0)",
    "ltx-core @ git+https://github.com/Lightricks/LTX-2.git@main#subdirectory=packages/ltx-core",
    "ltx-pipelines @ git+https://github.com/Lightricks/LTX-2.git@main#subdirectory=packages/ltx-pipelines",
    "transformers (>=4.41.2)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
